versioned_docs/version-3.0/sql-manual/sql-functions/table-functions/explode-numbers.md
---
{
    "title": "EXPLODE_NUMBERS",
    "language": "en"
}
---

<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->

## Description

The `explode_numbers` table function takes an integer n and expands all numbers within the range into multiple rows, each containing a single number. It is commonly used to generate a sequence of consecutive numbers and is often paired with LATERAL VIEW.

`explode_numbers_outer`, unlike `explode_numbers`, adds a NULL row when the table function generates zero rows.

## Syntax

```sql
EXPLODE_NUMBERS(<n>)
EXPLODE_NUMBERS_OUTER(<n>)
```

## Parameters

| Parameter | Description |
| -- | -- |
| `<n>` | Integer type input |

## Return Value

Returns a sequence of [0, n).

- Does not return any rows when n is 0 or NULL.

## Examples

```sql
select e1 from (select 1 k1) as t lateral view explode_numbers(5) tmp1 as e1;
```

```text
+------+
| e1   |
+------+
|    0 |
|    1 |
|    2 |
|    3 |
|    4 |
+------+
```

```sql
select e1 from (select 1 k1) as t lateral view explode_numbers(0) tmp1 as e1;
Empty set
```

```sql
select e1 from (select 1 k1) as t lateral view explode_numbers_outer(0) tmp1 as e1;
```

```text
+------+
| e1   |
+------+
| NULL |
+------+
```